--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "lucide-react": "^0.456.0",
     "mongodb": "^6.10.0",
     "next": "15.0.3",
+    "openai": "^4.73.1",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.5.4",
