--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skillpro",
+  "name": "testprephaven",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,21 +10,27 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "firebase": "^11.0.2",
+    "cookie": "^1.0.2",
+    "firebase": "^11.3.0",
     "firebase-admin": "^13.0.1",
+    "groq-sdk": "^0.15.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.462.0",
     "mongodb": "^6.11.0",
     "next": "15.0.3",
     "openai": "^4.73.1",
+    "pino": "^9.6.0",
     "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "shortid": "^2.2.16",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "wavesurfer.js": "^7.9.1"
   },
   "devDependencies": {
     "@types/node": "^22",
