--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "shortid": "^2.2.16",
+    "shortid": "^2.2.17",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "wavesurfer.js": "^7.9.1"
@@ -36,6 +36,7 @@
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/shortid": "^2.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
