--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie": "^1.0.2",
     "firebase": "^11.3.0",
     "firebase-admin": "^13.0.1",
+    "firebase-functions": "^6.3.2",
     "groq-sdk": "^0.15.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.462.0",
