--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-error-boundary": "^5.0.0",
     "react-hot-toast": "^2.4.1",
     "shortid": "^2.2.17",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "wavesurfer.js": "^7.9.1"
