--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "firebase": "^11.3.0",
     "firebase-admin": "^13.1.0",
     "firebase-functions": "^6.3.2",
+    "fs": "^0.0.1-security",
     "groq-sdk": "^0.15.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.462.0",
     "mongodb": "^6.11.0",
+    "nanoid": "^5.1.3",
     "next": "15.0.3",
+    "nodemailer": "^6.10.0",
     "openai": "^4.73.1",
     "pino": "^9.6.0",
     "razorpay": "^2.9.5",
@@ -31,6 +34,9 @@
     "react-dom": "^18.3.1",
     "react-error-boundary": "^5.0.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.5.0",
+    "react-tabs": "^6.1.0",
+    "recharts": "^2.15.1",
     "shortid": "^2.2.17",
     "sonner": "^2.0.1",
     "tailwind-merge": "^2.5.5",
@@ -39,6 +45,7 @@
   },
   "devDependencies": {
     "@types/node": "^22",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/shortid": "^2.2.0",
